Android: Playlist activity is complete with current IPlaylistView definition. Lock screen now showing 'mouse on' bitmaps. Updated bitmaps for shuffle and repeat to match the size of other player icons. Changed notification/widget/lockscreen background color to a darker color. Fixed non-floating point bugs in player, but the position is still wrong when the next song plays.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/WidgetPlayerLoading.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/WidgetPlayerLoading.axml
@@ -5,7 +5,7 @@
   android:layout_height="fill_parent"
   android:orientation="vertical"
   android:gravity="center"
-  android:background="#36454F">
+  android:background="@color/background">
   <TextView
     android:id="@+id/widgetPlayerLoading_lblMessage"
     android:layout_width="match_parent"
