--- a/MPfm/MPfm.Android/Resources/Layout/NotificationPlayer.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/NotificationPlayer.axml
@@ -5,7 +5,7 @@
   android:layout_height="fill_parent"
   android:orientation="horizontal"
   android:gravity="center_vertical"
-  android:background="#36454F">
+  android:background="@color/background">
   <LinearLayout
     android:layout_width="0dp"
     android:layout_height="wrap_content"
