--- a/MPfm/MPfm.Android/Resources/Layout/WidgetPlayer.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/WidgetPlayer.axml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:background="#36454F">
+    android:background="@color/background">
     <ImageView
         android:id="@+id/widgetPlayer_imageAlbum"
         android:layout_width="100dp"
