--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -95,21 +95,12 @@
       </LinearLayout>
     </LinearLayout>
   </LinearLayout>
-  <android.support.v4.view.ViewPager
-    android:id="@+id/main_pager"
+  <LinearLayout
+    android:id="@+id/main_fragmentContainer"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background"
-    android:layout_above="@+id/main_miniplayer">
-    <android.support.v4.view.PagerTitleStrip
-      android:id="@+id/main_pager_title_strip"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="top"
-      android:paddingTop="4dp"
-      android:paddingBottom="4dp"
-      android:background="#465966"
-      android:textColor="#ffffff"
-      android:textSize="14dp" />
-  </android.support.v4.view.ViewPager>
+    android:layout_above="@+id/main_miniplayer">    
+  </LinearLayout>
 </RelativeLayout>
