Android: Trying to make the playlist list cells movable; there's no standard way in Android to do this. Thank you Google once again for a job well done. Apple = 2 lines of code. Android = Dude, this is rocket science, you should create a class based on ListView and do it yourself.
Fixed big notification/standard notification switch. Added rounded corners to all buttons.

Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/BigNotificationPlayer.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/BigNotificationPlayer.axml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/bigNotificationPlayer"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
+  android:layout_height="100dp"
   android:background="@color/background">
   <ImageButton
     android:id="@+id/bigNotificationPlayer_btnClose"
