--- a/MPfm/MPfm.Android/Resources/Layout/Playlist.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Playlist.axml
@@ -4,7 +4,7 @@
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:orientation="vertical">
-  <ListView
+  <org.sessionsapp.android.CustomListView
     android:id="@+id/playlist_listView"
     android:layout_width="fill_parent"
     android:layout_height="0dp"
