Android: Fixed back/up navigation of Playlist; it now returns to the correct previous activity. Added move icon for movable cells. More work on trying to make cells movable in ListView.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
@@ -39,13 +39,6 @@
       android:textSize="12dp" />
   </LinearLayout>
   <ImageView
-    android:id="@+id/playlistCell_imageMove"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_trash" />
-  <ImageView
     android:id="@+id/playlistCell_imagePlay"
     android:layout_width="48dp"
     android:layout_height="48dp"
@@ -69,4 +62,10 @@
     android:visibility="gone"
     android:background="@android:color/transparent"
     android:src="@drawable/icon_speaker" />
+  <ImageView
+    android:id="@+id/playlistCell_imageMove"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:background="@android:color/transparent"
+    android:src="@drawable/icon_move" />
 </LinearLayout>
