Android: Added rounded transparent button theme throughout the application. Now building the project with Xamarin.Android 4.8.1; debugging works again on Android 4.3.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
@@ -40,12 +40,16 @@
         android:id="@+id/libraryPreferences_btnResetLibrary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_selector"
         android:text="Reset Library"
+        android:textColor="@color/button_textcolor"
         android:padding="6dip" />
     <Button
         android:id="@+id/libraryPreferences_btnUpdateLibrary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_selector"
         android:text="Update Library"
+        android:textColor="@color/button_textcolor"        
         android:padding="6dip" />
 </LinearLayout>
