--- a/MPfm/MPfm.Android/Resources/Layout/LockScreen.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LockScreen.axml
@@ -135,8 +135,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"    
+    android:background="@drawable/transparentbutton_selector"
     android:text="Close"
-    android:textColor="#FFFFFF"
+    android:textColor="@color/transparentbutton_textcolor"
     android:textSize="14dp"
     android:padding="12dp" />
 </LinearLayout>
