--- a/MPfm/MPfm.Android/Resources/Layout/Loops.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Loops.axml
@@ -21,6 +21,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
+      android:layout_margin="8dp"
       android:background="@drawable/transparentbutton_selector"      
       android:text="+"
       android:textColor="@color/transparentbutton_textcolor"
@@ -32,10 +33,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/transparent"
-    android:cacheColorHint="#00000000"
-    android:focusable="false"
-    android:focusableInTouchMode="false"
-    android:clickable="false"
-    android:divider="#00000000"
-    android:listSelector="@android:color/transparent" />
+    android:cacheColorHint="#333333"
+    android:divider="#999999"
+    android:dividerHeight="1px"
+    android:listSelector="#66CCCCCC" />
 </LinearLayout>
