--- a/MPfm/MPfm.Android/Resources/Layout/Markers.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Markers.axml
@@ -21,6 +21,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
+      android:layout_margin="8dp"
       android:background="@drawable/transparentbutton_selector"      
       android:text="+"
       android:textColor="@color/transparentbutton_textcolor"
