Android: Fixed style for action bar spinner.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetDetails.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetDetails.axml
@@ -54,7 +54,7 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      android:background="#36454F"
+      android:background="@color/actionbar"
       android:padding="10dp">
       <Button
         android:id="@+id/equalizerPresetDetails_btnNormalize"
