--- a/MPfm/MPfm.Android/Resources/Layout/spinner_dropdown_item.xml
+++ b/MPfm/MPfm.Android/Resources/Layout/spinner_dropdown_item.xml
@@ -5,7 +5,7 @@
   android:singleLine="true"
   android:layout_width="fill_parent"
   android:layout_height="52dp"
-  android:background="#36454F"
+  android:background="@drawable/spinner_selector"
   android:textColor="#FFFFFF"
   android:textSize="18dp"
 />
