--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -1,106 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_layout"
-    android:orientation="horizontal"
+  android:id="@+id/main_layout"
+  android:orientation="horizontal"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+  <ViewFlipper
+    android:id="@+id/main_viewflipper"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-  <LinearLayout
-      android:id="@+id/main_miniplayer"
-      android:orientation="horizontal"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:background="#36454F"
-      android:gravity="center_vertical"
-      android:layout_alignParentBottom="true">
-    <org.sessionsapp.android.SquareImageView
-      android:id="@+id/main_miniplayer_imageAlbum"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:scaleType="centerCrop"
-      android:background="@android:color/transparent" />
+    android:layout_height="100dp"
+    android:layout_alignParentBottom="true"
+    android:inAnimation="@anim/flipper_slide_in"
+    android:outAnimation="@anim/flipper_slide_out">
     <LinearLayout
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:orientation="vertical">
+      android:id="@+id/main_miniplayer"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:orientation="horizontal"
+      android:background="@color/actionbar"
+      android:gravity="center_vertical">
+      <org.sessionsapp.android.SquareImageView
+        android:id="@+id/main_miniplayer_imageAlbum"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:background="@android:color/transparent" />
       <LinearLayout
-        android:id="@+id/main_miniplayer_text"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="8dp">
-        <TextView
-          android:id="@+id/main_miniplayer_lblArtistName"
-          android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+          android:id="@+id/main_miniplayer_text"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:textColor="#FFFFFF"
-          android:text=""
-          android:textSize="14dp"
-          android:ellipsize="end"
-          android:singleLine="true" />
-        <TextView
-          android:id="@+id/main_miniplayer_lblAlbumTitle"
+          android:orientation="vertical"
+          android:paddingLeft="8dp">
+          <TextView
+            android:id="@+id/main_miniplayer_lblArtistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text=""
+            android:textSize="14dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+          <TextView
+            android:id="@+id/main_miniplayer_lblAlbumTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#EEEEEE"
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+          <TextView
+            android:id="@+id/main_miniplayer_lblSongTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#CCCCCC"
+            android:textSize="11dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+        </LinearLayout>
+        <LinearLayout
+          android:orientation="horizontal"
+          android:gravity="center_vertical"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text=""
-          android:textColor="#EEEEEE"
-          android:textSize="12dp"
-          android:ellipsize="end"
-          android:singleLine="true" />
-        <TextView
-          android:id="@+id/main_miniplayer_lblSongTitle"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text=""
-          android:textColor="#CCCCCC"
-          android:textSize="11dp"
-          android:ellipsize="end"
-          android:singleLine="true" />
+          android:layout_height="wrap_content">
+          <ImageButton
+            android:id="@+id/main_miniplayer_btnPrevious"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/player_previous"
+            android:padding="20dp" />
+          <ImageButton
+            android:id="@+id/main_miniplayer_btnPlayPause"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/player_pause"
+            android:padding="20dp" />
+          <ImageButton
+            android:id="@+id/main_miniplayer_btnNext"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/player_next"
+            android:padding="20dp" />
+          <TextView
+            android:id="@+id/main_miniplayer_lblSongPosition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0:00 / 19:43"
+            android:textColor="#CCCCCC"
+            android:textSize="11dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+        </LinearLayout>
       </LinearLayout>
+      <ImageButton
+        android:id="@+id/main_miniplayer_btnPlaylist"
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:padding="20dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/miniplayer_chevronright" />
+    </LinearLayout>
+    <LinearLayout
+      android:id="@+id/main_miniplaylist"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:orientation="horizontal"
+      android:background="@color/actionbar"
+      android:gravity="center_vertical">
+      <ImageButton
+        android:id="@+id/main_miniplaylist_btnPlayer"
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:padding="20dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/miniplayer_chevronleft" />
       <LinearLayout
-        android:orientation="horizontal"        
-        android:gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageButton
-          android:id="@+id/main_miniplayer_btnPrevious"
-          android:layout_width="60dp"
-          android:layout_height="44dp"
-          android:background="@android:color/transparent"
-          android:src="@drawable/player_previous"
-          android:padding="20dp" />
-        <ImageButton
-          android:id="@+id/main_miniplayer_btnPlayPause"
-          android:layout_width="60dp"
-          android:layout_height="44dp"
-          android:background="@android:color/transparent"
-          android:src="@drawable/player_pause"
-          android:padding="20dp" />
-        <ImageButton
-          android:id="@+id/main_miniplayer_btnNext"
-          android:layout_width="60dp"
-          android:layout_height="44dp"
-          android:background="@android:color/transparent"
-          android:src="@drawable/player_next"
-          android:padding="20dp" />
-        <TextView
-          android:id="@+id/main_miniplayer_lblSongPosition"
-          android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:text="0:00 / 19:43"
-          android:textColor="#CCCCCC"
-          android:textSize="11dp"
-          android:ellipsize="end"
-          android:singleLine="true" />
+          android:orientation="vertical"
+          android:paddingLeft="8dp">
+          <TextView
+            android:id="@+id/main_miniplaylist_lblPlaylist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text="Playlist"
+            android:textSize="14dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+          <TextView
+            android:id="@+id/main_miniplaylist_lblPlaylistTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[Playlist name]"
+            android:textColor="#EEEEEE"
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+          <TextView
+            android:id="@+id/main_miniplaylist_lblPlaylistCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[Playlist count]"
+            android:textColor="#CCCCCC"
+            android:textSize="11dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+        </LinearLayout>
       </LinearLayout>
     </LinearLayout>
-  </LinearLayout>
+  </ViewFlipper>
   <LinearLayout
     android:id="@+id/main_fragmentContainer"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background"
-    android:layout_above="@+id/main_miniplayer">    
+    android:layout_above="@+id/main_viewflipper">    
   </LinearLayout>
 </RelativeLayout>
